--- a/package.json
+++ b/package.json
@@ -2,25 +2,74 @@
   "name": "todo-app",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "dependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
+    "@gzaripov/webpack-pwa-manifest": "^4.4.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.124",
+    "@types/node": "^16.18.123",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
+    "@types/react-redux": "^7.1.34",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "eslint-plugin-prettier": "^5.2.2",
+    "eslint-webpack-plugin": "^4.2.0",
+    "postcss-selector-parser": "^7.0.0",
+    "prettier-eslint": "^16.3.0",
+    "react": "^18.0.0",
+    "react-bootstrap": "^2.10.7",
+    "react-bootstrap-icons": "^1.11.5",
+    "react-datepicker": "^7.6.0",
+    "react-dom": "^18.0.0",
+    "react-learing": "file:",
+    "react-redux": "^9.2.0",
+    "react-scripts": "^3.0.1",
+    "react-table": "^7.8.0",
+    "react-thunk": "^1.0.0",
+    "react-toastify": "^11.0.3",
+    "redux": "^5.0.1",
+    "redux-actions": "^3.0.3",
+    "redux-thunk": "^3.1.0",
+    "style-loader": "^4.0.0",
+    "todo-app": "file:",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "jest",
+    "start": "webpack serve",
+    "dev": "webpack serve --config webpack.config.js",
+    "watch": "webpack --watch",
+    "build": "webpack --mode=production",
+    "build-details": "webpack --mode=production --stats-error-details",
+    "lint-fix": "eslint src --ext .js,.jsx,.tsx,.ts --fix"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "moduleNameMapper": {
+      "^Assets(.*)$": "<rootDir>/src/assets$1",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/config/jest/fileMockup.js",
+      "\\.(css|less)$": "<rootDir>/config/jest/styleMockup.js"
+    },
+    "transform": {
+      "\\.tsx?$": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "<rootDir>/tsconfig.json"
+      }
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\](?!lodash-es/).+\\.js$"
+    ]
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +88,32 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+    "@types/jest": "^29.5.14",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
+    "eslint": "^9.18.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "globals": "^15.14.0",
+    "html-webpack-plugin": "^5.6.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "mini-css-extract-plugin": "^2.9.2",
+    "node-sass": "^9.0.0",
+    "prettier": "3.4.2",
+    "react-refresh": "^0.16.0",
+    "sass-loader": "^16.0.4",
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   }
 }
