--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,43 +4,24 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.26.0",
-    "@gzaripov/webpack-pwa-manifest": "^4.4.0",
     "@reduxjs/toolkit": "^2.5.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/node": "^16.18.123",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@types/react-redux": "^7.1.34",
-    "ajv": "^8.17.1",
-    "ajv-keywords": "^5.1.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
-    "css-minimizer-webpack-plugin": "^7.0.0",
-    "eslint-plugin-prettier": "^5.2.2",
-    "eslint-webpack-plugin": "^4.2.0",
-    "postcss-selector-parser": "^7.0.0",
-    "prettier-eslint": "^16.3.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.7",
     "react-bootstrap-icons": "^1.11.5",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.0.0",
-    "react-learing": "file:",
     "react-redux": "^9.2.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
-    "react-thunk": "^1.0.0",
     "react-toastify": "^11.0.3",
     "redux": "^5.0.1",
     "redux-actions": "^3.0.3",
     "redux-thunk": "^3.1.0",
-    "style-loader": "^4.0.0",
+    "three": "^0.176.0",
     "todo-app": "file:",
+    "vanta": "^0.5.24",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -64,7 +45,7 @@
     },
     "globals": {
       "ts-jest": {
-        "tsConfig": "<rootDir>/tsconfig.json"
+        "tsconfig": "<rootDir>/tsconfig.json"
       }
     },
     "transformIgnorePatterns": [
@@ -90,28 +71,48 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
+    "@gzaripov/webpack-pwa-manifest": "^4.4.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.14",
+    "@types/node": "^20.12.2",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@types/react-redux": "^7.1.34",
+    "@types/three": "^0.176.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "eslint": "^9.18.0",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.2",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-webpack-plugin": "^4.2.0",
     "globals": "^15.14.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.2",
     "node-sass": "^9.0.0",
+    "postcss-selector-parser": "^7.0.0",
     "prettier": "3.4.2",
+    "prettier-eslint": "^16.3.0",
     "react-refresh": "^0.16.0",
+    "react-scripts": "5.0.1",
     "sass-loader": "^16.0.4",
-    "ts-jest": "^29.2.5",
+    "style-loader": "^4.0.0",
+    "ts-jest": "29.0.3",
     "ts-loader": "^9.5.2",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0",
+    "typescript": "4.9.5",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
