--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
+    "@nivo/pie": "^0.93.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
@@ -13,6 +14,7 @@
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.0.0",
     "react-redux": "^9.2.0",
+    "react-responsive": "^10.0.1",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
     "react-toastify": "^11.0.3",
